Corrigido problema com baseHref

--- a/src/app/components/sobre/sobre.html
+++ b/src/app/components/sobre/sobre.html
@@ -1,24 +1,23 @@
-
 <section id="sobre" class="container">
   <div class="d-flex flex-column fs-5 my-auto">
     <h2 class="display-5 fw-bold text-center">Sobre Mim</h2>
     <p class="mt-5">
       Olá! Meu nome é <strong>Iago Henrique Schlemper</strong>, sou estudante de
-      <strong>Sistemas de Informação</strong> e desenvolvedor em formação. Tenho experiência
-      em projetos acadêmicos e pessoais que envolvem desde jogos até sistemas de gestão.
+      <strong>Sistemas de Informação</strong> e desenvolvedor em formação. Tenho experiência em
+      projetos acadêmicos e pessoais que envolvem desde jogos até sistemas de gestão.
     </p>
 
     <p>
-      Trabalho principalmente com <strong>C#</strong> e a <strong>plataforma .NET</strong> — em padrões
-      como MVC e aplicações Web com ASP.NET MVC. Também já desenvolvi projetos com
+      Trabalho principalmente com <strong>C#</strong> e a <strong>plataforma .NET</strong> — em
+      padrões como MVC e aplicações Web com ASP.NET MVC. Também já desenvolvi projetos com
       <strong>Kotlin</strong>, <strong>Java</strong>, <strong>C++</strong>, além de aplicações em
       <strong>HTML, CSS e JavaScript</strong>.
     </p>
 
     <p>
-      Tenho experiência com bancos de dados <strong>SQL</strong> (SQL Server, MySQL, PostgreSQL)
-      e também já trabalhei com <strong>Redis</strong> para cache e relatórios. Além disso,
-      , <strong>Docker</strong> e IDEs como Visual Studio, VS Code.
+      Tenho experiência com bancos de dados <strong>SQL</strong> (SQL Server, MySQL, PostgreSQL) e
+      também já trabalhei com <strong>Redis</strong> para cache e relatórios. Além disso, ,
+      <strong>Docker</strong> e IDEs como Visual Studio, VS Code.
     </p>
   </div>
 </section>
