Implementado Área para certificados com rolagem lateral

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,4 +4,5 @@
 <app-habilidades></app-habilidades>
 <app-icones-habilidades></app-icones-habilidades>
 <app-portfolio></app-portfolio>
+<app-certificados></app-certificados>
 <app-contato></app-contato>
