--- a/src/app/components/icones-habilidades/icones-habilidades.html
+++ b/src/app/components/icones-habilidades/icones-habilidades.html
@@ -1,4 +1,4 @@
-<section id="habilidades" class="container my-5">
+<section id="habilidades-tech" class="container my-5">
   <div class="d-flex flex-column my-auto">
     <h2 class="display-5 fw-bold text-center">Habilidades Técnicas</h2>
 
