--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -29,6 +29,9 @@
           <a class="nav-link" href="#portfolio">Portfólio</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#habilidades-tech">Tech</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#certificados">Certificados</a>
         </li>
         <li class="nav-item">
