Mudado cores roxo e rosa para azul claro e escuro

--- a/src/app/components/certificados/certificados.html
+++ b/src/app/components/certificados/certificados.html
@@ -1,4 +1,4 @@
-<section id="certificados" class="app-background-secundario py-5 position-relative">
+<section id="certificados" class="app-background py-5 position-relative">
   <div class="container">
     <h2 class="display-5 fw-bold text-center mb-4">Certificados</h2>
 
