--- a/src/app/components/contato/contato.html
+++ b/src/app/components/contato/contato.html
@@ -1,4 +1,4 @@
-<section id="contato" class="flex-column text-center">
+<section id="contato" class="flex-column text-center app-background-secundario">
   <div class="container my-auto">
     <span class="text-white fw-bold display-5 text-center">Contato</span>
 
