--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 @use 'bootstrap';
 @use 'bootstrap-icons';
 
-$cor-principal: #ec6afa;
-$cor-secundaria: #6d2bc2;
+$cor-principal: #2775ad;
+$cor-secundaria: #000000;
 
-$cor-background-1: #6d2bc2;
+$cor-background-1: #3d3997;
 $cor-background-2: #242527;
 
 section {
@@ -20,7 +20,7 @@ section {
 }
 
 .app-banner-text {
-  background: linear-gradient(90deg, rgba(229, 62, 168, 0.906), rgba(236, 200, 254, 0.925) 60%);
+  background: linear-gradient(90deg, rgba(9, 111, 122, 0.906), rgba(133, 173, 226, 0.925) 60%);
   background-clip: text;
   color: transparent;
 }
@@ -29,12 +29,12 @@ section {
   background-color: $cor-principal;
 
   &:hover {
-    background-color: #af7fee;
+    background-color: #7ac3db;
   }
 }
 
 .app-bg-foto {
-  background: linear-gradient(90deg, rgba(229, 62, 168, 0.906), rgba(172, 47, 189, 0.925) 60%);
+  background: linear-gradient(90deg, rgba(9, 111, 122, 0.906), rgba(133, 173, 226, 0.925) 60%);
   border-radius: 33% 67% 53% 47% / 66% 41% 59% 34%;
   height: 22rem;
   width: 22rem;
