Implementado Texto em baixa de Titulo da Área de Certificados

--- a/src/app/components/certificados/certificados.html
+++ b/src/app/components/certificados/certificados.html
@@ -2,6 +2,10 @@
   <div class="container">
     <h2 class="display-5 fw-bold text-center mb-4">Certificados</h2>
 
+    <p class="fs-5 text-center mb-4">
+      Explore meus certificados, que refletem o conhecimento adquirido em diversos cursos e treinamentos. Cada um representa meu esforço contínuo em aprimorar habilidades técnicas e práticas, garantindo uma evolução constante como desenvolvedor.
+    </p>
+
     <button class="seta seta-esquerda" (click)="rolar(-1)">
       <i class="bi bi-chevron-left"></i>
     </button>
