--- a/src/app/components/certificados/certificados.scss
+++ b/src/app/components/certificados/certificados.scss
@@ -11,16 +11,16 @@
 
 .certificado-card {
   scroll-snap-align: start;
-  width: 300px;      // largura fixa
-  height: 400px;     // altura fixa
+  width: 300px;
+  height: 400px;
   transition: transform 0.2s ease;
   transform-origin: bottom center;
   display: flex;
   flex-direction: column;
 
   img {
-    width: 100%;       // ocupa toda a largura fixa do card
-    object-fit: cover; // mantém proporção e corta excesso
+    width: 100%;
+    object-fit: cover;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
   }
@@ -65,7 +65,6 @@
   }
 }
 
-/* ================== Responsividade ================== */
 @media (max-width: 1024px) {
   .certificado-card {
     width: 80%;
@@ -74,6 +73,10 @@
   .certificados-container {
     gap: 3rem;
     padding-top: 3rem;
+  }
+
+  .seta {
+    display: none;
   }
 }
 
@@ -89,6 +92,6 @@
   }
 
   .seta {
-    display: none; // esconde as setas no mobile
+    display: none;
   }
 }
