--- a/src/app/components/portfolio/portfolio.scss
+++ b/src/app/components/portfolio/portfolio.scss
@@ -59,7 +59,6 @@
   flex-wrap: wrap;
 }
 
-/* Media queries para responsividade */
 @media (max-width: 992px) {
   .portfolio-card {
     width: 550px;
@@ -70,6 +69,10 @@
     gap: 3rem;
     padding-left: 1rem;
     padding-bottom: 1rem;
+  }
+
+  .seta {
+    display: none;
   }
 }
 
@@ -86,6 +89,6 @@
   }
 
   .seta {
-    display: none; // esconde as setas no mobile
+    display: none;
   }
 }
