Organizado imagens em pastas separadas

--- a/src/app/components/banner/banner.html
+++ b/src/app/components/banner/banner.html
@@ -17,18 +17,18 @@
 
           <div class="d-flex justify-content-center">
             <a target="_blank" href="https://github.com/iagodizlla">
-              <img alt="Github logo" src="github.png" />
+              <img alt="Github logo" src="geral/github.png" />
             </a>
 
             <a target="_blank" href="https://linkedin.com/in/iago-schlemper">
-              <img alt="Linkedin logo" src="linkedin.png" />
+              <img alt="Linkedin logo" src="geral/linkedin.png" />
             </a>
           </div>
         </div>
       </div>
 
       <div class="col-auto pt-1 order-0 order-lg-1 app-bg-foto ms-auto">
-        <img class="img-fluid mt-4 rounded-circle" src="iago.png" alt="Foto Iago Schlemper" />
+        <img class="img-fluid mt-4 rounded-circle" src="geral/iago.png" alt="Foto Iago Schlemper" />
       </div>
     </div>
   </div>
