--- a/src/app/components/contato/contato.html
+++ b/src/app/components/contato/contato.html
@@ -19,11 +19,11 @@
 
     <div class="d-flex justify-content-center mt-5">
       <a target="_blank" href="https://github.com/iagodizlla">
-        <img alt="Github logo" src="github.png" />
+        <img alt="Github logo" src="geral/github.png" />
       </a>
 
       <a target="_blank" href="https://linkedin.com/in/iago-schlemper">
-        <img alt="Linkedin logo" src="linkedin.png" />
+        <img alt="Linkedin logo" src="geral/linkedin.png" />
       </a>
     </div>
   </div>
