Implementado Área de Formação

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,4 +5,5 @@
 <app-icones-habilidades></app-icones-habilidades>
 <app-portfolio></app-portfolio>
 <app-certificados></app-certificados>
+<app-carreiras></app-carreiras>
 <app-contato></app-contato>
