--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -35,6 +35,9 @@
           <a class="nav-link" href="#certificados">Certificados</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#carreiras">Formação</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#contato">Contato</a>
         </li>
       </ul>
