--- a/src/app/components/carreiras/carreiras.scss
+++ b/src/app/components/carreiras/carreiras.scss
@@ -92,3 +92,8 @@
     transform: scale(1.15);
   }
 }
+
+button.active {
+  background-color: #0d6efd; // azul escuro ou outro destaque
+  color: white;
+}
