Colocado Aba de Experiência como "Em Construção"

--- a/src/app/components/carreiras/carreiras.html
+++ b/src/app/components/carreiras/carreiras.html
@@ -51,7 +51,7 @@
     <!-- Imagem de experiência em desenvolvimento -->
     @if (abaSelecionada === 'experiencia') {
       <div class="text-center mt-5">
-        <img src="geral/under.png" alt="Em desenvolvimento" class="img-fluid" style="max-width: 590px;">
+        <img src="geral/under.png" alt="Em desenvolvimento" class="img-fluid experiencia-img">
       </div>
     }
   </div>
