--- a/src/app/components/carreiras/carreiras.scss
+++ b/src/app/components/carreiras/carreiras.scss
@@ -42,42 +42,14 @@
   }
 }
 
+.experiencia-img {
+    max-width: 45%;  // ou um valor fixo como 300px
+    height: auto;
+  }
+
 #stackCard {
   display: flex;
   flex-wrap: wrap;
-}
-
-/* Responsividade */
-@media (max-width: 1024px) {
-  .carreira-card {
-    width: 300px;
-    height: 300px;
-  }
-
-  .carreiras-container {
-    gap: 2rem;
-    padding-top: 3rem;
-  }
-
-  .seta {
-    display: none;
-  }
-}
-
-@media (max-width: 768px) {
-  .carreira-card {
-    width: 200px;
-    height: 200px;
-  }
-
-  .carreiras-container {
-    gap: 1rem;
-    padding-top: 2rem;
-  }
-
-  .seta {
-    display: none;
-  }
 }
 
 .stack-icon {
@@ -94,6 +66,41 @@
 }
 
 button.active {
-  background-color: #0d6efd; // azul escuro ou outro destaque
+  background-color: #0d6efd;
   color: white;
+}
+
+/* Responsividade */
+@media (max-width: 1024px) {
+  .carreira-card {
+    width: 350px;
+    height: 430px;
+  }
+
+  .carreiras-container {
+    gap: 2rem;
+    padding-top: 3rem;
+  }
+
+  .experiencia-img {
+    max-width: 85%;  // ou um valor fixo como 300px
+    height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .carreira-card {
+    width: 300px;   // maior que antes
+    height: 450px;  // maior que antes
+  }
+
+  .carreiras-container {
+    gap: 1.5rem;
+    padding-top: 2rem;
+  }
+
+  .experiencia-img {
+    max-width: 80%;  // ou um valor fixo como 300px
+    height: auto;
+  }
 }
