Melhorado responsividade de formação, projetos e certificados para dispositiveis móveis

--- a/src/app/components/carreiras/carreiras.scss
+++ b/src/app/components/carreiras/carreiras.scss
@@ -90,7 +90,7 @@ button.active {
 
 @media (max-width: 768px) {
   .carreira-card {
-    width: 300px;   // maior que antes
+    width: 104%;   // maior que antes
     height: 450px;  // maior que antes
   }
 
