Adicionado modal de detalhes do desenvolvedor e gráfico de frequência de contribuições no portfólio

--- a/src/app/components/portfolio/portfolio.html
+++ b/src/app/components/portfolio/portfolio.html
@@ -47,6 +47,17 @@
                 <i class="bi bi-github"></i>
                 Repositório
               </a>
+              <!-- Botão para detalhes do desenvolvedor -->
+              <button
+                type="button"
+                (click)="selecionarItem(item)"
+                class="btn btn-outline-light"
+                data-bs-toggle="modal"
+                data-bs-target="#detalhesDevModal"
+              >
+                <i class="bi bi-info-circle"></i>
+                Detalhes Dev
+              </button>
             </div>
           </div>
         </div>
@@ -101,6 +112,74 @@
         >
           <i class="bi bi-github"></i>
           Repositório
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="detalhesDevModal"
+  tabindex="-1"
+  aria-labelledby="detalhesDevModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content bg-dark text-white rounded-4">
+      <div class="modal-header">
+        <h5 class="modal-title" id="detalhesDevModalLabel">
+          {{ itemPortfolioSelecionado?.titulo }} - Detalhes de Desenvolvedor
+        </h5>
+        <button
+          type="button"
+          class="btn-close btn-close-white"
+          data-bs-dismiss="modal"
+          aria-label="Fechar"
+        ></button>
+      </div>
+
+      <div class="modal-body modal-body-customizado">
+        <div class="row mb-3">
+          <div class="col-md-6 text-center">
+            <img
+              [src]="itemPortfolioSelecionado?.urlImagem"
+              class="img-fluid rounded mb-2"
+              alt="Imagem do projeto"
+            />
+          </div>
+          <div class="col-md-6">
+            <ul class="list-group list-group-flush text-white">
+              <li class="list-group-item bg-dark">
+                <strong>Quantidade de commits do projeto:</strong>
+                {{ itemPortfolioSelecionado?.detalhesD?.quantidadeCommits || 'N/A' }}
+              </li>
+              <li class="list-group-item bg-dark">
+                <strong>Status do projeto:</strong>
+                {{ itemPortfolioSelecionado?.detalhesD?.statusProjeto || 'N/A' }}
+              </li>
+              <li class="list-group-item bg-dark">
+                <strong>Período de desenvolvimento:</strong><br>
+                {{ itemPortfolioSelecionado?.detalhesD?.tempoDesenvolvimento || 'N/A' }}
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <div class="mb-3">
+            <h6>Frequência de contribuições minhas no projeto</h6>
+            <canvas #contribuicoesChart></canvas>
+          </div>
+
+        </div>
+
+        <a
+          [href]="itemPortfolioSelecionado?.urlRepositorio"
+          target="_blank"
+          class="btn btn-outline-light"
+        >
+          <i class="bi bi-github"></i> Repositório
         </a>
       </div>
     </div>
